# quran-tui

./: .gitignore  Cargo.toml  README.md  SETUP.md
.github/workflows/: ci.yml  release.yml
packaging/: README.md
packaging/linux/: quran-tui
scripts/: generate-package-manager-metadata.py  package-deb.sh  package-release.ps1  package-release.sh  package-rpm.sh  release-metadata.py  test-linux-launcher.sh
src/: api.rs  app.rs  ayah_panel.rs  config.rs  downloads.rs  main.rs  mushaf.rs  persistence.rs  player.rs  shaping.rs  terminal.rs  ui.rs
src/app/: browser.rs  core.rs  navigation.rs  playback.rs  settings.rs  state.rs  study.rs  tests.rs  types.rs
