[package]
name = "quran-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal Quran player and study app"
readme = "README.md"
repository = "https://github.com/khalidelborai/quran-tui"
homepage = "https://github.com/khalidelborai/quran-tui"
license = "UNLICENSED"

[dependencies]
arabic_reshaper = "0.4.2"
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
unicode-bidi = "0.3.18"

[package.metadata.deb]
maintainer = "quran-tui maintainers"
depends = "$auto, mpv"
recommends = "fonts-noto-core"
section = "utils"
priority = "optional"
extended-description = "Terminal Quran player and study app with browse, playback, downloads, and study mode."
assets = [
  ["packaging/linux/quran-tui", "usr/bin/quran-tui", "755"],
  ["target/release/quran-tui", "usr/lib/quran-tui/quran-tui-bin", "755"],
  ["README.md", "usr/share/doc/quran-tui/README.md", "644"],
  ["SETUP.md", "usr/share/doc/quran-tui/SETUP.md", "644"],
]

[package.metadata.generate-rpm]
summary = "Terminal Quran player and study app"
assets = [
  { source = "packaging/linux/quran-tui", dest = "/usr/bin/quran-tui", mode = "755" },
  { source = "target/release/quran-tui", dest = "/usr/lib/quran-tui/quran-tui-bin", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/quran-tui/README.md", mode = "644" },
  { source = "SETUP.md", dest = "/usr/share/doc/quran-tui/SETUP.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
mpv = "*"
